feat: update projects content, add FRC Academy navbar link, improve project modal UX on mobile

--- a/src/data/locales/en.json
+++ b/src/data/locales/en.json
@@ -22,7 +22,8 @@
     "events": "Events",
     "awards": "Awards",
     "sponsors": "Sponsors",
-    "contact": "Contact"
+    "contact": "Contact",
+    "frcAcademy": "FRC Academy"
   },
   "hero": {
     "title": "Callister",
